[package]
name = "hades"
description = "lurking"
version = "0.0.1"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
alloy = { version = "0.2.1", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json",
    "json-rpc",
    "rpc-client",
] }
tokio = { version = "1.39.2", features = ["full"] }
lazy_static = "1.5.0"
serde_json = "1.0.121"
serde = { version = "1.0.204", features = ["derive"] }
itertools = "0.13.0"
tracing-appender = "0.2.3"
revm = { version = "13.0.0" }
revm-inspectors = "0.5.0"
reth = { git = "https://github.com/paradigmxyz/reth" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth" }
reth-db = { git = "https://github.com/paradigmxyz/reth" }
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
ureq = { version = "2.10.1", features = ["json"] }
alloy-rlp = "0.3.8"
ethers = "2.0"